storage/innobase/handler/ha_innodb.cc
@@ -116,8 +116,6 @@ simple_thread_local ha_handler_stats *mariadb_stats;
 #include <limits>
 #include <myisamchk.h>                          // TT_FOR_UPGRADE
 
-#define thd_get_trx_isolation(X) ((enum_tx_isolation)thd_tx_isolation(X))
-
 extern "C" void thd_mark_transaction_to_rollback(MYSQL_THD thd, bool all);
 unsigned long long thd_get_query_id(const MYSQL_THD thd);
 void thd_clear_error(MYSQL_THD thd);
@@ -821,14 +819,16 @@ innodb_tmpdir_validate(
 	return(0);
 }
 
-/******************************************************************//**
-Maps a MySQL trx isolation level code to the InnoDB isolation level code
-@return	InnoDB isolation level */
-static inline
-uint
-innobase_map_isolation_level(
-/*=========================*/
-	enum_tx_isolation	iso);	/*!< in: MySQL isolation level code */
+/** @return the current transaction isolation level */
+static inline uint innodb_isolation_level(const THD *thd) noexcept
+{
+  static_assert(ISO_REPEATABLE_READ == TRX_ISO_REPEATABLE_READ, "");
+  static_assert(ISO_SERIALIZABLE == TRX_ISO_SERIALIZABLE, "");
+  static_assert(ISO_READ_COMMITTED == TRX_ISO_READ_COMMITTED, "");
+  static_assert(ISO_READ_UNCOMMITTED == TRX_ISO_READ_UNCOMMITTED, "");
+  return high_level_read_only
+    ? ISO_READ_UNCOMMITTED : (thd_tx_isolation(thd) & 3);
+}
 
 /** Gets field offset for a field in a table.
 @param[in]	table	MySQL table object
@@ -4470,21 +4470,18 @@ innobase_start_trx_and_assign_read_view(
 
 	trx_start_if_not_started_xa(trx, false);
 
-	/* Assign a read view if the transaction does not have it yet.
-	Do this only if transaction is using REPEATABLE READ isolation
-	level. */
-	trx->isolation_level = innobase_map_isolation_level(
-		thd_get_trx_isolation(thd)) & 3;
+	/* Assign a read view if the transaction does not have one yet.
+	Skip this for the READ UNCOMMITTED isolation level. */
+	trx->isolation_level = innodb_isolation_level(thd) & 3;
 
-	if (trx->isolation_level == TRX_ISO_REPEATABLE_READ) {
+	if (trx->isolation_level != TRX_ISO_READ_UNCOMMITTED) {
 		trx->read_view.open(trx);
 	} else {
 		push_warning_printf(thd, Sql_condition::WARN_LEVEL_WARN,
 				    HA_ERR_UNSUPPORTED,
 				    "InnoDB: WITH CONSISTENT SNAPSHOT"
-				    " was ignored because this phrase"
-				    " can only be used with"
-				    " REPEATABLE READ isolation level.");
+				    " is ignored at READ UNCOMMITTED"
+				    " isolation level.");
 	}
 
 	/* Set the MySQL flag to mark that there is an active transaction */
@@ -16032,31 +16029,6 @@ ha_innobase::start_stmt(
 }
 
 /******************************************************************//**
-Maps a MySQL trx isolation level code to the InnoDB isolation level code
-@return InnoDB isolation level */
-static inline
-uint
-innobase_map_isolation_level(
-/*=========================*/
-	enum_tx_isolation	iso)	/*!< in: MySQL isolation level code */
-{
-	if (UNIV_UNLIKELY(srv_force_recovery >= SRV_FORCE_NO_UNDO_LOG_SCAN)
-	    || UNIV_UNLIKELY(srv_read_only_mode)) {
-		return TRX_ISO_READ_UNCOMMITTED;
-	}
-	switch (iso) {
-	case ISO_REPEATABLE_READ:	return(TRX_ISO_REPEATABLE_READ);
-	case ISO_READ_COMMITTED:	return(TRX_ISO_READ_COMMITTED);
-	case ISO_SERIALIZABLE:		return(TRX_ISO_SERIALIZABLE);
-	case ISO_READ_UNCOMMITTED:	return(TRX_ISO_READ_UNCOMMITTED);
-	}
-
-	ut_error;
-
-	return(0);
-}
-
-/******************************************************************//**
 As MySQL will execute an external lock for every new table it uses when it
 starts to process an SQL statement (an exception is when MySQL calls
 start_stmt for the handle) we can use this function to store the pointer to
@@ -16520,19 +16492,29 @@ ha_innobase::store_lock(
 	Be careful to ignore TL_IGNORE if we are going to do something with
 	only 'real' locks! */
 
-	/* If no MySQL table is in use, we need to set the isolation level
+	/* If no table handle is open, we need to set the isolation level
 	of the transaction. */
 
 	if (lock_type != TL_IGNORE
 	    && trx->n_mysql_tables_in_use == 0) {
-		trx->isolation_level = innobase_map_isolation_level(
-			(enum_tx_isolation) thd_tx_isolation(thd)) & 3;
-
-		if (trx->isolation_level <= TRX_ISO_READ_COMMITTED) {
-
+		switch ((trx->isolation_level
+			 = innodb_isolation_level(thd) & 3)) {
+		case ISO_REPEATABLE_READ:
+			break;
+		case ISO_READ_COMMITTED:
+		case ISO_READ_UNCOMMITTED:
 			/* At low transaction isolation levels we let
 			each consistent read set its own snapshot */
 			trx->read_view.close();
+			break;
+		case ISO_SERIALIZABLE:
+			auto trx_state = trx->state;
+			if (trx_state == TRX_STATE_NOT_STARTED) {
+				trx_start_if_not_started(trx, false);
+				trx->read_view.open(trx);
+			} else {
+				ut_ad(trx_state == TRX_STATE_ACTIVE);
+			}
 		}
 	}
 
